--- a/.cproject
+++ b/.cproject
@@ -28,7 +28,7 @@
 									<listOptionValue builtIn="false" value="&quot;${NDKROOT}/platforms/android-9/arch-arm/usr/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${NDKROOT}/sources/cxx-stl/gnu-libstdc++/4.6/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${NDKROOT}/sources/cxx-stl/gnu-libstdc++/4.6/libs/armeabi-v7a/include&quot;"/>
-									<listOptionValue builtIn="false" value="/Users/blade/Documents/eclipse/workspace/OpenCV-2.4.9-android-sdk/sdk/native/jni/include"/>
+									<listOptionValue builtIn="false" value="/Users/weihong/Coding/eclipse/workspace/OpenCV4sdk/sdk/native/jni/include"/>
 								</option>
 								<option id="org.eclipse.cdt.build.core.settings.holder.symbols.1424359063" name="Symbols" superClass="org.eclipse.cdt.build.core.settings.holder.symbols" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="ANDROID=1"/>
